--- a/ac/docs/docs.css
+++ b/ac/docs/docs.css
@@ -115,7 +115,7 @@ div.code
 
 span.code
 {
-	font-family: Courier, Sans-Serif;
+	font-family: Courier New, Sans-Serif;
 	margin: 0;
 	padding: 0;
 }
