--- a/ac/docs/docs.css
+++ b/ac/docs/docs.css
@@ -1,4 +1,4 @@
-
+/* (C) Adrian Henke 2007 - ZLIB License */
 
 body
 {
@@ -106,6 +106,8 @@ a, a:hover, a:visited
 	color: #333333;
 }
 
+/* code */
+
 div.code
 {
 	font-family: Courier New, Sans-Serif;
@@ -153,6 +155,3 @@ table.items td
 {
 	vertical-align: top;
 }
-
-
-
