--- a/ac/docs/styles/ac.css
+++ b/ac/docs/styles/ac.css
@@ -75,6 +75,7 @@ div#main div#version
 	padding: 0;
 	margin: 0 auto 0 auto;
 	width: 720px;
+	height: 55px;
 	
 	font-family: Courier New, Sans-Serif;
 	font-size: 55px;
@@ -124,4 +125,20 @@ p
 ul
 {
 	list-style-type:square;
+}
+
+/* code */
+
+div.code
+{
+	font-family: Courier New, Sans-Serif;
+	margin: 1em 0 1em 0;
+	padding: 0 0 0 1em;
+}
+
+span.code
+{
+	font-family: Courier New, Sans-Serif;
+	margin: 0;
+	padding: 0;
 }
