--- a/ac/docs/styles/ac.css
+++ b/ac/docs/styles/ac.css
@@ -1,6 +1,8 @@
 ﻿/* ZLIB licensed, (C) 2007 Adrian 'driAn' Henke, http://www.sprintf.org */
-/* common styles for all AC xhtml documentation pages */
 
+/* 
+	common styles for all documentation pages 
+*/
 
 /* main layout */
 
