--- a/ac/docs/styles/cubedoc.css
+++ b/ac/docs/styles/cubedoc.css
@@ -1,120 +1,10 @@
-/* (C) Adrian Henke 2007 - ZLIB License */
+/* ZLIB licensed, (C) 2007 Adrian 'driAn' Henke, http://www.sprintf.org */
+
+/* 
+	styles for the readme
+*/
 
 @import url(ac.css);
-
-
-/*
-html
-{
-	background-color: #343434;	/* blame firefox' buggy xslt support 
-}
-
-body
-{
-	font-family: Verdana, Sans-Serif;
-	margin: 0px;
-	padding: 10px 0 10px 0;
-	font-size: 12px;
-	color: Black;
-}
-
-ul
-{
-	list-style-type:square;
-}
-
-p
-{
-	margin-top: 0;
-	margin-bottom: 1em;
-}
-
-img
-{
-	border-width: 0;
-}
-
-pre
-{
-	margin: 0 0 1em 0;
-	padding: 0;
-	font-family: Courier New;
-	font-size: 12px;
-}
-
-table
-{
-	margin-bottom: 1em;
-}
-
-h1
-{
-	font-size: 24px;
-	margin: 0 0 0.5em 0;
-}
-
-h2
-{
-	font-size: 18px;	
-	margin: 0 0 0.5em 0;
-}
-
-h3
-{
-	font-size: 14px;
-	margin: 0 0 0.5em 0;
-}
-
-#main
-{
-	background-color: #666666;
-	width: 650px;
-	margin: 0;
-	padding: 10px;
-	text-align: left;
-	border: solid 1px black;
-}
-
-#header
-{	
-	background-color: black;
-	width: 650px;
-	margin: 0px;
-	padding: 0;
-	height: 10px;
-	text-align: right;
-	font-size: 10px;
-	color: White;
-	font-family: Courier New, Sans-Serif;
-	line-height: 1em;
-}
-
-#footer
-{	
-	background-color: black;
-	width: 650px;
-	margin: 0;
-	padding: 0;
-	height: 10px;
-	text-align: right;
-	font-size: 10px;
-	color: White !important;
-	font-family: Courier New, Sans-Serif;
-	line-height: 1em;
-}
-
-#footer a, #footer a:hover, #footer a:visited
-{
-	color: White;
-	text-decoration: none;
-}
-
-a, a:hover, a:visited
-{
-	color: #333333;
-}
-
-*/
 
 
 /* guns */
