--- a/ac/docs/styles/cuberef.css
+++ b/ac/docs/styles/cuberef.css
@@ -256,3 +256,31 @@ div.section div.identifier div.references span.none
 {
 	
 }
+
+/* examples */
+
+div.section div.identifier div.examples
+{
+    margin: 0;
+    padding : 0;
+}
+
+div.section div.identifier div.examples div.code
+{
+    margin: 10px 0 10px 0;
+    padding: 0;
+}
+
+div.section div.identifier div.examples div.exampleExplanation
+{
+    margin: 0;
+    padding: 0;
+}
+
+
+/* return value */
+
+div.section div.identifier div.return
+{
+}
+
