--- a/ac/docs/styles/cuberef.css
+++ b/ac/docs/styles/cuberef.css
@@ -239,7 +239,10 @@ div.section div.identifier div.remarks div.remark
 
 div.section div.identifier div.references
 {
+    margin: 10px 0 0 0;
+	padding: 0;
 }
+
 
 div.section div.identifier div.references a.internal
 {
