--- a/ac/docs/styles/ac.css
+++ b/ac/docs/styles/ac.css
@@ -143,3 +143,13 @@ span.code
 	margin: 0;
 	padding: 0;
 }
+
+span.codecommandline
+{
+	font-family: Courier New, Courier, monospace, Sans-Serif;
+	margin: 0;
+	padding: 0;
+	font-weight: bold;
+	font-size: 1.3em;
+	text-align: center;
+}
